# livo-handheld

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Dockerfile.doxygen  Dockerfile.mapping  Dockerfile.original  LICENSE  NOTES.md  README.md  init.vim
3rd/Livox-SDK2/sdk_core/comm/: define.h
3rd/Livox-SDK2/sdk_core/logger_handler/: logger_manager.h
3rd/livox_ros_driver2/src/comm/: comm.h
assets/: BG30 grip adapter.stl  BG30 pin adapter.stl  compartment_cover.stl  compartment_hull.stl  livo rpi case.stl  livo sensor frame.stl
livo_runner/: CMakeLists.txt  package.xml
livo_runner/config/: extrinsics.yaml
livo_runner/config/camera/: camchain.yaml
livo_runner/launch/: cam_imu_calib.launch  camera.launch  camera_image_compressed.launch  camera_image_raw.launch  camera_uncalibrated.launch  imu_kalibr.launch  lidar.launch  msg_mid360.launch
livo_runner/scripts/: extrinsic_calibration.py
mapping/: .clang-format  .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  TODO.md  build.sh  package.xml
mapping/config/: mapping.colorized.rviz  mapping.rviz  mapping_hilti.yaml  mapping_mid360.yaml
mapping/config/kalibr/: README.md  config.kalibr.yaml  results.camera0.yaml
mapping/docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  build_docs.sh  groups.dox  mathjax_macros.js
mapping/docs/pages/: backend_isam2.md  cluster_tracking.md  core_structure.md  jacobians.md  mainpage.md  recovery.md
mapping/include/: Visualization.hpp
mapping/include/mapping/: Buffers.hpp  BundleAdjustment.hpp  Config.hpp  FeatureDatabase.hpp  FeatureManager.hpp  MappingSystem.hpp  States.hpp  helpers.hpp  logging.hpp  types.hpp
mapping/include/mapping/backend/: FactorManager.hpp  FeatureManager.hpp  Smoother.hpp
mapping/include/mapping/factors/: PlanarClusterFactor.hpp  PointToPlaneFactor.hpp
mapping/include/mapping/frontend/: CameraFrontend.hpp  ImuFrontend.hpp  LidarFrontend.hpp  RecoveryFrontend.hpp
mapping/launch/: hilti.launch  mapper_node.launch
mapping/scripts/: gperf.sh
mapping/src/: mapper_node.cpp
mapping/src/mapping/: Buffers.cpp  BundleAdjustment.cpp  FeatureDatabase.cpp  FeatureManager.cpp  MappingSystem.cpp  States.cpp  Visualization.cpp
mapping/src/mapping/backend/: FeatureManager.cpp  Smoother.cpp
mapping/src/mapping/factors/: PlanarClusterFactor.cpp  PointToPlaneFactor.cpp
mapping/src/mapping/frontend/: CameraFrontend.cpp  ImuFrontend.cpp  LidarFrontend.cpp  RecoveryFrontend.cpp
recorder_runner/: build.sh  package.xml  setup.cfg  setup.py
recorder_runner/launch/: launch_recording.py  recording.launch.py
scripts/: add-libcamera-ros-driver-ppa.sh
scripts/docker/: build_image.sh  entrypoint.sh  installation.sh  prod.sh  run_image.sh
scripts/docker/mapping/: build_image.sh  run_image.sh
webinterface/: README.md  app.py  docker-entrypoint.sh  interfaces.py  requirements.txt  state.py
webinterface/templates/: base.html  index.html  nav.html  recording.html
